--- a/pom.xml
+++ b/pom.xml
@@ -81,27 +81,15 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>ak.physSim.main.Main</mainClass>
-                        </manifest>
-                    </archive>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                </configuration>
-            </plugin>
         </plugins>
         <resources>
             <resource>
-                <directory>.</directory>
+                <directory>res/</directory>
                 <includes>
                     <include>**/fragment.fs</include>
                     <include>**/vertex.vs</include>
                 </includes>
+                <targetPath>res</targetPath>
             </resource>
         </resources>
     </build>
